RESOLVED FIXED281539
[WebGPU] Indirect indexed validation does not take into account index buffer offset
https://bugs.webkit.org/show_bug.cgi?id=281539
Summary [WebGPU] Indirect indexed validation does not take into account index buffer ...
Mike Wyrzykowski
Reported 2024-10-15 17:56:46 PDT
[WebGPU] Indirect indexed validation does not take into account index buffer offset
Attachments
Mike Wyrzykowski
Comment 1 2024-10-15 17:57:00 PDT
Mike Wyrzykowski
Comment 2 2024-10-15 18:09:09 PDT
EWS
Comment 3 2024-10-16 07:06:24 PDT
Committed 285260@main (e3bf879afc70): <https://commits.webkit.org/285260@main> Reviewed commits have been landed. Closing PR #35249 and removing active labels.
EWS
Comment 4 2024-10-16 13:46:41 PDT
Committed 283286.296@safari-7620-branch (3872f0f493c9): <https://commits.webkit.org/283286.296@safari-7620-branch> Reviewed commits have been landed. Closing PR #2048 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.