[WebGPU] Indirect indexed validation does not take into account index buffer offset https://bugs.webkit.org/show_bug.cgi?id=281539 rdar://137966310

Reviewed by Tadeu Zagallo.

drawIndirectIndexed must have space for at least one index

* LayoutTests/fast/webgpu/nocrash/fuzz-281539-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-281539.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):

Canonical link: https://commits.webkit.org/285260@main